add updates to the notebook

--- a/BEAAPI.ipynb
+++ b/BEAAPI.ipynb
@@ -24,9 +24,6 @@
     "import pandas as pd\n",
     "from config import api_key\n",
     "from pandas.io.json import json_normalize\n",
-    "\n",
-    "\n",
-    "\n",
     "api_key"
    ]
   },
@@ -40,7 +37,7 @@
      "output_type": "stream",
      "text": [
       "<Response [200]>\n",
-      "{'BEAAPI': {'Request': {'RequestParam': [{'ParameterName': 'USERID', 'ParameterValue': 'E098DA86-033D-4B74-A6D6-15047B0006DD'}, {'ParameterName': 'METHOD', 'ParameterValue': 'GETDATASETLIST'}]}, 'Results': {'Dataset': [{'DatasetName': 'NIPA', 'DatasetDescription': 'Standard NIPA tables'}, {'DatasetName': 'NIUnderlyingDetail', 'DatasetDescription': 'Standard NI underlying detail tables'}, {'DatasetName': 'MNE', 'DatasetDescription': 'Multinational Enterprises'}, {'DatasetName': 'FixedAssets', 'DatasetDescription': 'Standard Fixed Assets tables'}, {'DatasetName': 'ITA', 'DatasetDescription': 'International Transactions Accounts'}, {'DatasetName': 'IIP', 'DatasetDescription': 'International Investment Position'}, {'DatasetName': 'GDPbyIndustry', 'DatasetDescription': 'GDP by Industry'}, {'DatasetName': 'RegionalIncome', 'DatasetDescription': 'The RegionalIncome dataset is obsolete. Please use the Regional dataset. See API documentation at apps.bea.gov/developers'}, {'DatasetName': 'RegionalProduct', 'DatasetDescription': 'The RegionalProduct dataset is obsolete. Please use the Regional dataset. See API documentation at apps.bea.gov/developers'}, {'DatasetName': 'InputOutput', 'DatasetDescription': 'Input-Output Data'}, {'DatasetName': 'UnderlyingGDPbyIndustry', 'DatasetDescription': 'Underlying GDP by Industry'}, {'DatasetName': 'IntlServTrade', 'DatasetDescription': 'International Services Trade'}, {'DatasetName': 'Regional', 'DatasetDescription': 'Regional data sets'}, {'DatasetName': 'APIDatasetMetaData', 'DatasetDescription': 'Metadata about other API datasets'}]}}}\n"
+      "{'BEAAPI': {'Request': {'RequestParam': [{'ParameterName': 'USERID', 'ParameterValue': 'E098DA86-033D-4B74-A6D6-15047B0006DD'}, {'ParameterName': 'METHOD', 'ParameterValue': 'GETDATASETLIST'}]}, 'Results': {'Dataset': [{'DatasetName': 'NIPA', 'DatasetDescription': 'Standard NIPA tables'}, {'DatasetName': 'NIUnderlyingDetail', 'DatasetDescription': 'Standard NI underlying detail tables'}, {'DatasetName': 'MNE', 'DatasetDescription': 'Multinational Enterprises'}, {'DatasetName': 'FixedAssets', 'DatasetDescription': 'Standard Fixed Assets tables'}, {'DatasetName': 'ITA', 'DatasetDescription': 'International Transactions Accounts'}, {'DatasetName': 'IIP', 'DatasetDescription': 'International Investment Position'}, {'DatasetName': 'GDPbyIndustry', 'DatasetDescription': 'GDP by Industry'}, {'DatasetName': 'InputOutput', 'DatasetDescription': 'Input-Output Data'}, {'DatasetName': 'UnderlyingGDPbyIndustry', 'DatasetDescription': 'Underlying GDP by Industry'}, {'DatasetName': 'IntlServTrade', 'DatasetDescription': 'International Services Trade'}, {'DatasetName': 'Regional', 'DatasetDescription': 'Regional data sets'}, {'DatasetName': 'APIDatasetMetaData', 'DatasetDescription': 'Metadata about other API datasets'}]}}}\n"
      ]
     }
    ],
@@ -69,12 +66,12 @@
       "        \"Request\": {\n",
       "            \"RequestParam\": [\n",
       "                {\n",
-      "                    \"ParameterName\": \"METHOD\",\n",
-      "                    \"ParameterValue\": \"GETDATASETLIST\"\n",
-      "                },\n",
-      "                {\n",
       "                    \"ParameterName\": \"USERID\",\n",
       "                    \"ParameterValue\": \"E098DA86-033D-4B74-A6D6-15047B0006DD\"\n",
+      "                },\n",
+      "                {\n",
+      "                    \"ParameterName\": \"METHOD\",\n",
+      "                    \"ParameterValue\": \"GETDATASETLIST\"\n",
       "                }\n",
       "            ]\n",
       "        },\n",
@@ -107,14 +104,6 @@
       "                {\n",
       "                    \"DatasetDescription\": \"GDP by Industry\",\n",
       "                    \"DatasetName\": \"GDPbyIndustry\"\n",
-      "                },\n",
-      "                {\n",
-      "                    \"DatasetDescription\": \"The RegionalIncome dataset is obsolete. Please use the Regional dataset. See API documentation at apps.bea.gov/developers\",\n",
-      "                    \"DatasetName\": \"RegionalIncome\"\n",
-      "                },\n",
-      "                {\n",
-      "                    \"DatasetDescription\": \"The RegionalProduct dataset is obsolete. Please use the Regional dataset. See API documentation at apps.bea.gov/developers\",\n",
-      "                    \"DatasetName\": \"RegionalProduct\"\n",
       "                },\n",
       "                {\n",
       "                    \"DatasetDescription\": \"Input-Output Data\",\n",
@@ -186,72 +175,62 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>NIPA</td>\n",
        "      <td>Standard NIPA tables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>NIUnderlyingDetail</td>\n",
        "      <td>Standard NI underlying detail tables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>MNE</td>\n",
        "      <td>Multinational Enterprises</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>FixedAssets</td>\n",
        "      <td>Standard Fixed Assets tables</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>ITA</td>\n",
        "      <td>International Transactions Accounts</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>IIP</td>\n",
        "      <td>International Investment Position</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>GDPbyIndustry</td>\n",
        "      <td>GDP by Industry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>RegionalIncome</td>\n",
-       "      <td>The RegionalIncome dataset is obsolete. Please...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>RegionalProduct</td>\n",
-       "      <td>The RegionalProduct dataset is obsolete. Pleas...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>7</td>\n",
        "      <td>InputOutput</td>\n",
        "      <td>Input-Output Data</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>8</td>\n",
        "      <td>UnderlyingGDPbyIndustry</td>\n",
        "      <td>Underlying GDP by Industry</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>9</td>\n",
        "      <td>IntlServTrade</td>\n",
        "      <td>International Services Trade</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <td>10</td>\n",
        "      <td>Regional</td>\n",
        "      <td>Regional data sets</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>13</th>\n",
+       "      <td>11</td>\n",
        "      <td>APIDatasetMetaData</td>\n",
        "      <td>Metadata about other API datasets</td>\n",
        "    </tr>\n",
@@ -260,21 +239,19 @@
        "</div>"
       ],
       "text/plain": [
-       "                DatasetName                                 DatasetDescription\n",
-       "0                      NIPA                               Standard NIPA tables\n",
-       "1        NIUnderlyingDetail               Standard NI underlying detail tables\n",
-       "2                       MNE                          Multinational Enterprises\n",
-       "3               FixedAssets                       Standard Fixed Assets tables\n",
-       "4                       ITA                International Transactions Accounts\n",
-       "5                       IIP                  International Investment Position\n",
-       "6             GDPbyIndustry                                    GDP by Industry\n",
-       "7            RegionalIncome  The RegionalIncome dataset is obsolete. Please...\n",
-       "8           RegionalProduct  The RegionalProduct dataset is obsolete. Pleas...\n",
-       "9               InputOutput                                  Input-Output Data\n",
-       "10  UnderlyingGDPbyIndustry                         Underlying GDP by Industry\n",
-       "11            IntlServTrade                       International Services Trade\n",
-       "12                 Regional                                 Regional data sets\n",
-       "13       APIDatasetMetaData                  Metadata about other API datasets"
+       "                DatasetName                    DatasetDescription\n",
+       "0                      NIPA                  Standard NIPA tables\n",
+       "1        NIUnderlyingDetail  Standard NI underlying detail tables\n",
+       "2                       MNE             Multinational Enterprises\n",
+       "3               FixedAssets          Standard Fixed Assets tables\n",
+       "4                       ITA   International Transactions Accounts\n",
+       "5                       IIP     International Investment Position\n",
+       "6             GDPbyIndustry                       GDP by Industry\n",
+       "7               InputOutput                     Input-Output Data\n",
+       "8   UnderlyingGDPbyIndustry            Underlying GDP by Industry\n",
+       "9             IntlServTrade          International Services Trade\n",
+       "10                 Regional                    Regional data sets\n",
+       "11       APIDatasetMetaData     Metadata about other API datasets"
       ]
      },
      "execution_count": 4,
@@ -290,27 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'BEAAPI': {'Request': {'RequestParam': [{'ParameterName': 'DATASETNAME',\n",
-       "     'ParameterValue': 'REGIONAL'},\n",
+       "{'BEAAPI': {'Request': {'RequestParam': [{'ParameterName': 'METHOD',\n",
+       "     'ParameterValue': 'GETDATA'},\n",
+       "    {'ParameterName': 'LINECODE', 'ParameterValue': '3'},\n",
+       "    {'ParameterName': 'DATASETNAME', 'ParameterValue': 'REGIONAL'},\n",
        "    {'ParameterName': 'GEOFIPS', 'ParameterValue': '00000'},\n",
        "    {'ParameterName': 'USERID',\n",
        "     'ParameterValue': 'E098DA86-033D-4B74-A6D6-15047B0006DD'},\n",
-       "    {'ParameterName': 'RESULTFORMAT', 'ParameterValue': 'JSON'},\n",
        "    {'ParameterName': 'YEAR',\n",
        "     'ParameterValue': '2006,2007,2008,2009,2010,2011,2012,2013,2014,2015,2016,2017,2018,2019'},\n",
-       "    {'ParameterName': 'TABLENAME', 'ParameterValue': 'SAEXP1'},\n",
-       "    {'ParameterName': 'METHOD', 'ParameterValue': 'GETDATA'},\n",
-       "    {'ParameterName': 'LINECODE', 'ParameterValue': '3'}]},\n",
+       "    {'ParameterName': 'RESULTFORMAT', 'ParameterValue': 'JSON'},\n",
+       "    {'ParameterName': 'TABLENAME', 'ParameterValue': 'SAEXP1'}]},\n",
        "  'Results': {'Statistic': 'Total personal consumption expenditures: Durable goods',\n",
        "   'UnitOfMeasure': 'Millions of current dollars',\n",
        "   'PublicTable': 'SAEXP1 Durable goods',\n",
-       "   'UTCProductionTime': '2020-04-11T18:35:29.803',\n",
+       "   'UTCProductionTime': '2020-09-04T00:59:18.027',\n",
        "   'NoteRef': ' ',\n",
        "   'Dimensions': [{'Name': 'Code', 'DataType': 'string', 'IsValue': '0'},\n",
        "    {'Name': 'GeoFips', 'DataType': 'string', 'IsValue': '0'},\n",
@@ -414,7 +391,7 @@
        "     'NoteText': 'Last updated: October 3, 2019-- new PCE by state statistics for 2018; revised statistics for 2014-2017.'}]}}}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +444,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -477,7 +454,7 @@
        "      <td>1,158,333.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -487,7 +464,7 @@
        "      <td>1,188,043.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -497,7 +474,7 @@
        "      <td>1,098,760.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -507,7 +484,7 @@
        "      <td>1,012,121.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -517,7 +494,7 @@
        "      <td>1,048,962.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5</th>\n",
+       "      <td>5</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -527,7 +504,7 @@
        "      <td>1,093,498.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6</th>\n",
+       "      <td>6</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -537,7 +514,7 @@
        "      <td>1,144,221.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7</th>\n",
+       "      <td>7</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -547,7 +524,7 @@
        "      <td>1,189,413.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
+       "      <td>8</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -557,7 +534,7 @@
        "      <td>1,242,075.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <td>9</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -567,7 +544,7 @@
        "      <td>1,305,896.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
+       "      <td>10</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -577,7 +554,7 @@
        "      <td>1,352,645.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11</th>\n",
+       "      <td>11</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -587,7 +564,7 @@
        "      <td>1,412,569.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>12</th>\n",
+       "      <td>12</td>\n",
        "      <td>SAEXP1-3</td>\n",
        "      <td>00000</td>\n",
        "      <td>United States</td>\n",
@@ -632,7 +609,7 @@
        "12         6  1,475,584.8  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +653,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
