--- a/BEAAPI.ipynb
+++ b/BEAAPI.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'E098DA86-033D-4B74-A6D6-15047B0006DD'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies\n",
     "import matplotlib.pyplot as plt\n",
@@ -24,7 +13,7 @@
     "import pandas as pd\n",
     "from config import api_key\n",
     "from pandas.io.json import json_normalize\n",
-    "api_key"
+    "# api_key"
    ]
   },
   {
